kustomize/overlays/dev/node-affinity.yaml
# Copyright 2024
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This patch adds node affinity and tolerations to ensure pods
# in the dev namespace only run on dev node group

apiVersion: apps/v1
kind: Deployment
metadata:
  name: all-deployments
spec:
  template:
    spec:
      # Node selector - simple way to target specific nodes
      nodeSelector:
        environment: dev
        workload: microservices-dev

      # Tolerations - allow pods to be scheduled on tainted dev nodes
      tolerations:
      - key: "environment"
        operator: "Equal"
        value: "dev"
        effect: "NoSchedule"

      # Node affinity - preferred scheduling rules
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: environment
                operator: In
                values:
                - dev
              - key: workload
                operator: In
                values:
                - microservices-dev
