kustomize/overlays/dev/gateway.yaml
# Dev Environment Istio Gateway and VirtualService
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: dev-gateway
  namespace: microservices-dev
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-dev
  namespace: microservices-dev
spec:
  hosts:
  - "*"
  gateways:
  - dev-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: frontend.microservices-dev.svc.cluster.local
        port:
          number: 80
